<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.userinformation.screens.main.MainActivity">

   <android.support.design.widget.TextInputLayout
       android:id="@+id/nameTextLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:errorEnabled="true"
       >

      <EditText
          android:id="@+id/nameEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name"
          android:inputType="text"
          android:maxLines="1"
          />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/ageTextLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:errorEnabled="true"
       >

      <EditText
          android:id="@+id/ageEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/age"
          android:inputType="number"
          android:maxLines="1"
          />

   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/emailTextLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:errorEnabled="true"
       >

      <EditText
          android:id="@+id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:maxLines="1"
          android:inputType="textEmailAddress"
          />
   </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/professionTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
      >

      <EditText
          android:id="@+id/professionEdiText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/profession"
          android:inputType="text"
          android:maxLines="1"
          />
   </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_information"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/showAllUsersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_users"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />

</LinearLayout>
